--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <br>
         <button id="add-books" type="submit">Add</button>
     </form>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
