js classes updated

--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Awesome</title>
+    <title>Awesome books</title>
 </head>
 <body>
+    <div class="awesome">
     <h1>Awesome Books</h1>
-    <div class="books">        
-    </div>
-
-    <form class="form">
-        <input type="text" name=" title" id="title" placeholder="Title" required><br>
-        <br>
-        <input type="text" name="author" id="author" placeholder="Author" required><br>
-        <br>
-        <button id="add-books" type="submit">Add</button>
+        <div id="book-list"></div><br>
+    <form class="form1" id="book-form">
+    <div class="form-input">
+        <label for="title"></label>
+        <input type="text" class="title" id="title" placeholder="Title" required >
+    </div><br>
+    <div class="form-input">
+        <label for="author"></label>
+        <input type="text" class="author" id="author" placeholder="Author" required >
+    </div><br>
+    <button type="submit">Add</button>
     </form>
-    <script src="script.js"></script>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
