added the nav bar with the contact fomr

--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
     <title>Awesome books</title>
 </head>
 <body>
+    <nav class="nav-bar">
+        <p class="first-child">Awesome Books</p>
+        <p class="List"><a href="#">List</a></p>
+        <p>|</p>
+        <p class="Add">Add new</p>
+        <p>|</p>
+        <p class="Contact"><a class="no-dec" href="#">Contact</a></p>
+    </nav>
+    <section class="addedBooks">
+       <h2>All awesome books</h2>
+    <div id="book-list"></div><br>
+</section>
     <div class="awesome">
     <h1>Awesome Books</h1>
-        <div id="book-list"></div><br>
+        
+        
     <form class="form1" id="book-form">
     <div class="form-input">
         <label for="title"></label>
@@ -22,6 +35,16 @@
     </div><br>
     <button type="submit">Add</button>
     </form>
+</div>
+<div class="contact-form">
+    <h2>Contact information</h2>
+    <p class="message">Do you have any questions or you just want to say "Hello"?</p>
+    <p>You can reach out to us</p>
+    <ul>
+        <li>Our e-mail: mail@mail.com</li>
+        <li>Our phone number: 00443256712834</li>
+        <li>Our address: Streetname 22,84503 City, Country</li>
+    </ul>
 </div>
 <script src="script.js"></script>
 </body>
