Added the footer with the style

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <li>Our address: Streetname 22,84503 City, Country</li>
     </ul>
 </div>
+<footer>Copyright ...</footer>
 <script src="script.js"></script>
 </body>
 </html>
