Changed the message of adding book from Awesome books to Add new book

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="book-list"></div><br>
 </section>
     <div class="awesome">
-    <h1>Awesome Books</h1>      
+    <h2>Add new book</h2>      
     <form class="form1" id="book-form">
     <div class="form-input">
         <label for="title"></label>
